--- a/simulation/development/Defect_cooperativity.ipynb
+++ b/simulation/development/Defect_cooperativity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -343,287 +343,396 @@
     "\n",
     "sys.path.append('../CNT-SIM/')\n",
     "from CNTSimFile import CNTSimFile\n",
-    "from mc_sim import exciton_walk, photons_fate, exciton_simulation"
+    "from mc_sim import exciton_walk, create_exciton, create_defects"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_r_per_s = 1.5e10  # constant for radiativ decay from E11\n",
-    "k_d_r_per_s = 2.5e09  # constant for radiativ decay from E11*\n",
-    "k_nr_per_s = 5e09  # constant of non-radiativ decay from E11\n",
-    "k_d_nr_per_s = 5e09  # constant for non-radiativ decay from E11*\n",
-    "# termal detrapping 10.1021/acs.jpclett.8b03732\n",
-    "k_dt_per_s = 0.5 * (1e12/ 385 + 1e12/ 1132) + 0.1e12 * np.exp(-1.6182e-11 / (kB * 300))"
+    "def create_defects(CNT_length=300, n_def=10):\n",
+    "    \"\"\"Creates defects along the CNT at random position.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    CNT_length : int, optional\n",
+    "        Length of the CNT in nm, global constant as default.\n",
+    "    n_def : int, optional\n",
+    "        Number of defects on the CNT, global constant as default.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    pos_def : 1D array\n",
+    "        Positions in nm of the defects on the CNT stored in\n",
+    "        array size (1, n_def)\n",
+    "    \"\"\"\n",
+    "    return np.random.randint(0, CNT_length, size=n_def)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kin_const = [k_d_r_per_s, k_r_per_s, k_d_nr_per_s, k_nr_per_s, k_dt_per_s]"
+    "defects = create_defects(n_def=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 139,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 69, 158, 230,  75, 149,  52, 182,   2, 121, 165])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "defects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "defects = np.sort(defects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  2,  52,  69,  75, 121, 149, 158, 165, 182, 230])"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "defects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff=10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = [defects[1]-defects[0] >= diff]\n",
+    "mask.extend([True if defects[i+1]-defects[i] >= diff\n",
+    "             and defects[i]-defects[i-1] >= diff\n",
+    "             else False for i in np.arange(1, len(defects_sort)-1)])\n",
+    "mask.extend([defects[-1]-defects[-2] >= diff])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, True, False, False, True, False, False, False, True, True]"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  2,  52, 121, 182, 230])"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "defects_sort[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_exc_0 = 53\n",
+    "pos_exc_1 = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Existing file loaded successfully.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "../CNT-SIM/CNTSimFile.py:26: UserWarning: File already exists, kinetic constants ingored.\n",
-      "  warn(\"File already exists, kinetic constants ingored.\")\n"
+      "decayed\n"
      ]
     }
    ],
    "source": [
-    "SimTest_1 = CNTSimFile('../sim_output/SimTest_len_1.h5', kin_const)"
+    "pathway = np.arange(pos_exc_0, pos_exc_1)\n",
+    "if np.in1d(pathway, defects).any():\n",
+    "    pos_exc_t = defects[np.in1d(defects, pathway)][0]\n",
+    "    if np.in1d(defects[mask], pos_exc_t).any():\n",
+    "        print('trapped')\n",
+    "    else:\n",
+    "        print('decayed')\n",
+    "        \n",
+    "        \n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_exc_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SimTest_1.defect_dependance(5000, exciton_walk, np.arange(0, 30, 10), 300, 1)"
+    "def exciton_simulation(t_step, kin_const, n_defects=10, CNT_length=L_nm,\n",
+    "                       r_exc_nm=R_nm):\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    t_step : float\n",
+    "        Timestep in ps.\n",
+    "    constants : 1D array\n",
+    "        kinetic constants in order of:\n",
+    "        [k_d_r_per_s, k_r_per_s, k_d_nr_per_s, k_nr_per_s, k_dt_per_s]\n",
+    "    n_defects : int, optional\n",
+    "        Number of defects on CNT. Default is 10.\n",
+    "    CNT_length : int, optional\n",
+    "        Length of the CNT in nm, global constant as default.\n",
+    "    r_exc_nm : int\n",
+    "        Radius of the Exciton in nm\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    exciton_fate : 1D array\n",
+    "        Array contains the binned fate of the exciton for each MC step:\n",
+    "        fate = 0 : E11* radiative decay\n",
+    "        fate = 1 : E11 radiative decay\n",
+    "        fate = 2 : E11* non-radiative decay\n",
+    "        fate = 3 : E11 non-radiative decay\n",
+    "        fate = 4 : Exciton stays in trap\n",
+    "        fate = 5 : Free diffusion walk\n",
+    "        fate = 6 : Thermal escape\n",
+    "        fate = 7 : Exciton becomes trapped\n",
+    "    \"\"\"\n",
+    "\n",
+    "    constants = np.zeros(7)\n",
+    "    constants[:4] = kin_const[:4]\n",
+    "    constants[-1] = kin_const[-1]\n",
+    "    constants[4] = k_nothing_d(t_step, *kin_const[:2])\n",
+    "    constants[5] = k_nothing(t_step, *kin_const[1::2])\n",
+    "\n",
+    "    # inital exciton is free in E11\n",
+    "    fate = 4\n",
+    "    trapped = 0\n",
+    "\n",
+    "    # Initiate matrix to store exciton fate\n",
+    "    exciton_fate = np.zeros(len(constants)+1)\n",
+    "\n",
+    "    # Inital position of the exciton and defects\n",
+    "    pos_exc_0 = create_exciton(CNT_length)\n",
+    "    defects = create_defects(CNT_length, n_defects)\n",
+    "\n",
+    "    # Masks defects which are too close together and result in non-radiative\n",
+    "    # decay\n",
+    "    defects = np.sort(defects)\n",
+    "    mask = [defects[1]-defects[0] >= r_exc_nm]\n",
+    "    mask.extend([True if defects[i+1]-defects[i] >= r_exc_nm\n",
+    "                 and defects[i]-defects[i-1] >= r_exc_nm\n",
+    "                 else False for i in np.arange(1, len(defects)-1)])\n",
+    "    mask.extend([defects[-1]-defects[-2] >= r_exc_nm])\n",
+    "\n",
+    "    while fate > 3:\n",
+    "\n",
+    "        # step if exciton is free\n",
+    "        if trapped == 0:\n",
+    "            pos_exc_1 = round(pos_exc_0 + (\n",
+    "                2 * D_exc_nm_per_s * t_step * 1e-12)**0.5)\n",
+    "\n",
+    "\n",
+    "        # check if exciton became trapped\n",
+    "        if trapped == 0:\n",
+    "            pathway = np.arange(pos_exc_0, pos_exc_1)\n",
+    "            if np.in1d(pathway, defects).any():\n",
+    "                # set exciton to position of first encountered trap\n",
+    "                pos_exc_1 = defects[np.in1d(defects, pathway)][0]\n",
+    "                # check if non-radiative decay takes plase\n",
+    "                if np.in1d(defects[mask], pos_exc_1).any():\n",
+    "                    trapped = 1\n",
+    "                    fate = 7\n",
+    "                    exciton_fate[fate] += 1\n",
+    "                else:\n",
+    "                    fate = 2\n",
+    "                    exciton_fate[fate] += 1\n",
+    "                    break\n",
+    "\n",
+    "        # quenching of the exciton at tube end\n",
+    "        if pos_exc_1 >= CNT_length:\n",
+    "            fate = 2\n",
+    "            exciton_fate[fate] += 1\n",
+    "            break\n",
+    "                \n",
+    "        # fate of a trapped exciton\n",
+    "        if trapped == 1:\n",
+    "            # calculate probability for fate of trapped exciton\n",
+    "            p_fate = np.array([e * random.uniform(0, 1)\n",
+    "                               for e in constants[::2]])\n",
+    "            # Store result for highest probability\n",
+    "            fate = 2*p_fate.argmax()\n",
+    "            exciton_fate[fate] += 1\n",
+    "            if fate == 6:\n",
+    "                pos_exc_1 += r_exc_nm\n",
+    "\n",
+    "        # fate of freely diffusing exciton\n",
+    "        else:\n",
+    "            # calculate probability for fate of free exciton\n",
+    "            p_fate = np.array([e * random.uniform(0, 1)\n",
+    "                               for e in constants[1::2]])\n",
+    "            # Store result for highest probability\n",
+    "            fate = (p_fate.argmax() * 2 + 1)\n",
+    "            exciton_fate[fate] += 1\n",
+    "\n",
+    "        # insurance that there won't be an endless loop\n",
+    "        if exciton_fate.sum() > 1e6:\n",
+    "            print('Simulation exceeds 1e6 steps, loop aborded')\n",
+    "            return exciton_fate\n",
+    "\n",
+    "        # set position to new starting position\n",
+    "        pos_exc_0 = pos_exc_1\n",
+    "\n",
+    "    return exciton_fate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "constants = [1.1, 1.2, 1.3, 1.4, 1.5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_fate = np.array([e * random.uniform(0, 1) for e in constants[::2]])\n",
+    "# Store result for highest probability\n",
+    "2*p_fate.argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 10, 250, 490])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(10, 501, 240)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([10, 20, 30])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(10, 40, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
    "outputs": [],
    "source": [
-    "#SimTest_1.length_dependance(5000, exciton_walk, np.arange(10, 40, 10), 15 , 1)"
+    "D_exc_nm_per_s = 1.07e15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 221,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "SimTest_1.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.000e+00, 0.000e+00, 1.000e+00, 0.000e+00, 2.297e+03, 0.000e+00,\n",
-       "       0.000e+00, 1.000e+00])"
+       "96"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#exciton_walk(1,30, kin_const=kin_const)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3865c1b073724fe6af436dbe077ebe4e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([6.6100000e+02, 1.0000000e+00, 3.5440000e+03, 7.9400000e+02,\n",
-       "        3.1524475e+07, 1.2500000e+02, 1.5800000e+02, 4.2050000e+03]),\n",
-       " array([0.1322, 0.0002]))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#photons_fate(5000, exciton_walk, {'t_step': 1, 'n_defects': 30, 'kin_const': kin_const})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#SimTest_2 = CNTSimFile('../sim_output/SimTest_2.h5', kin_const)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b61ac29459254d4bb31d1d8e369fb453",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([5.9700000e+02, 1.0000000e+00, 3.6300000e+03, 7.7200000e+02,\n",
-       "        3.1247452e+07, 9.0000000e+01, 1.7000000e+02, 4.2270000e+03]),\n",
-       " array([0.1194, 0.0002]))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#SimTest_2.photons_fate(5000, exciton_walk, {'t_step': 1, 'n_defects': 30})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exciton_simulation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SimTest_3 = CNTSimFile('../sim_output/SimTest_3.h5', kin_const)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f80223f236c64362a064dbd1ae9c1c11",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([6.1300000e+02, 1.0000000e+00, 4.3860000e+03, 0.0000000e+00,\n",
-       "        3.1693237e+07, 3.6000000e+02, 1.8700000e+02, 4.3230000e+03]),\n",
-       " array([0.1226, 0.0002]))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SimTest_3.photons_fate(5000, exciton_simulation, {'t_step': 1, 'n_defects': 15,\n",
-    "                                                  'CNT_length': 300, 'r_exc_nm':2})"
+    "round(pos_exc_0 + ( 2 * D_exc_nm_per_s * 1 * 1e-12)**0.5)"
    ]
   },
   {
